# biomdp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/biomdp/: Nexus_FuncionesApoyo.py  bikefitting_funciones_apoyo.py  bikefitting_functions_utils.py  biomec_xarray_accessor.py  bland_altman_plot.py  create_time_series.py  filter_butter.py  filtrar_Butter.py  fotogrammetry.py  general_processing_functions.py  image_pose.py  jump_forces_utils.py  nexus_funciones_apoyo.py  nexus_functions_utils.py  processing_mediapipe.py  readViconCsv.py  read_isen_csv.py  read_kistler_c3d.py  read_kistler_txt.py  read_noraxon_c3d.py  read_noraxon_csv.py  read_vicon_c3d.py  read_vicon_csv.py  shannon_reconstruction.py  slice_time_series_phases.py  trataFuerzasSaltos.py  trata_fuerzas_saltos.py
src/biomdp.egg-info/: PKG-INFO  SOURCES.txt
src/biomdp/io/: read_isen_csv.py  read_kistler_c3d.py  read_kistler_txt.py  read_noraxon_c3d.py  read_vicon_c3d.py  read_vicon_csv.py
src/datasets/: iSen_angles.csv  kistler_CMJ_1plate.c3d  kistler_CMJ_1plate.txt  kistler_COP.c3d  kistler_COP.txt  kistler_DJ_2plates.C3D  kistler_DJ_2plates.txt  vicon_CMJ_kinem_kinet_emg.c3d
tests/: test_fotogrammetry.py  test_multicam_dlt.py  test_slice_time_series_phases.py
